// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpenseSummary with multiple expense 1`] = `
<div>
  <h2>
    Viewing 
    34
     
    expenses
     totalling 
    $2.44
  </h2>
</div>
`;

exports[`should render ExpenseSummary without expenses 1`] = `
<div>
  <h2>
    Viewing 
    0
     
    expenses
     totalling 
    $0.00
  </h2>
</div>
`;
